// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders App 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <h1>
      AC VILLAGERS
    </h1>
  </div>
  <h2>
    Loading...
  </h2>
</DocumentFragment>
`;

exports[`App component renders Villager 1`] = `
<DocumentFragment>
  <figure>
    <img />
    <p
      class="name"
    />
  </figure>
</DocumentFragment>
`;

exports[`App component renders VillagerDetail 1`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`App component renders Villagers 1`] = `
<DocumentFragment>
  <div
    class="villagerList"
    data-testid="villagers"
  >
    <div>
      <a
        href="/undefined"
      >
        <figure>
          <img
            src=""
          />
          <p
            class="name"
          />
        </figure>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
